--- a/NeedAdvice.html
+++ b/NeedAdvice.html
@@ -19,5 +19,16 @@
     </head>
 
     <body>
+        <form action="/action_page.php">
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" value=""><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname" value=""><br>
+            <label for="email">Email:</label><br>
+            <input type="text" id="email" name="email" value=""><br>
+            <label for="description">Description:</label><br>
+            <input type="text" id="description" name="description" value=""><br><br>
+            <input type="submit" value="Submit">
+        </form>
     </body>
 </html>
