--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         
         <button onclick="window.location.href = 'index.html';">Home</button>
         <button onclick="window.location.href = 'TipsforBalance.html';">Tips</button>
+        <button onclick="window.location.href = 'business.html';">For Businesses</button>
         <button onclick="window.location.href = 'NeedAdvice.html';">Need Advice</button>
         <button onclick="window.location.href = 'about.html';">About Us</button><br/></br/>
     </head>
