--- a/business.html
+++ b/business.html
@@ -5,7 +5,7 @@
     <title>Work-Life For Businesses</title>
     <meta name="description" content="Business Info">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/textbox.css">
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/logofade.js"></script>  
