--- a/NeedAdvice.html
+++ b/NeedAdvice.html
@@ -14,8 +14,9 @@
 
         <button onclick="window.location.href = 'index.html';">Home</button>
         <button onclick="window.location.href = 'TipsforBalance.html';">Tips</button>
+        <button onclick="window.location.href = 'business.html';">For Businesses</button>
         <button onclick="window.location.href = 'NeedAdvice.html';">Need Advice</button>
-        <button onclick="window.location.href = 'about.html';">About Us</button><br/><br/>
+        <button onclick="window.location.href = 'about.html';">About Us</button><br/></br/>
     </head>
 
     <body>
