--- a/TipsforBalance.html
+++ b/TipsforBalance.html
@@ -22,8 +22,9 @@
         <div class="head">
             <button onclick="window.location.href = 'index.html';">Home</button>
             <button onclick="window.location.href = 'TipsforBalance.html';">Tips</button>
+            <button onclick="window.location.href = 'business.html';">For Businesses</button>
             <button onclick="window.location.href = 'NeedAdvice.html';">Need Advice</button>
-            <button onclick="window.location.href = 'about.html';">About Us</button><br/><br/>
+            <button onclick="window.location.href = 'about.html';">About Us</button><br/></br/>
         </div>
     </head>
     
