--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
        </iframe>
        
        <article>The importance of maintaining a work life balance is just splitting your time between work and social life. Whether you have trouble maintaining a social life or just want to do something fun outside of work but you still have to maintain your job, this site is for you. Today we'll be guiding you on the ways of maintaining a well balanced work life while at the same time you can feel confident making some new friends.</article>
- 
+    <footer>
+  <p><a href="#">Back To Top</a> 
+  <p><em>Copyright 2020 Jason Richter, Riley Morrow, Phil Johnson, Brady Becker. All rights reserved.</em></p>
+    </footer>
     </body>
 </html>
