--- a/NeedAdvice.html
+++ b/NeedAdvice.html
@@ -31,5 +31,9 @@
             <input type="text" id="description" name="description" value=""><br><br>
             <input type="submit" value="Submit">
         </form>
+        <footer>
+            <p><a href="#">Back To Top</a> 
+            <p><em>Copyright 2020 Jason Richter, Riley Morrow, Phil Johnson, Brady Becker. All rights reserved.</em></p>
+        </footer>
     </body>
 </html>
