--- a/NeedAdvice.html
+++ b/NeedAdvice.html
@@ -11,7 +11,7 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
         <link rel="stylesheet" type="text/css" href="css/styles.css">
-
+         <link rel="stylesheet" type="text/css" href="Form.css">
         <button onclick="window.location.href = 'index.html';">Home</button>
         <button onclick="window.location.href = 'TipsforBalance.html';">Tips</button>
         <button onclick="window.location.href = 'business.html';">For Businesses</button>
