--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <p>Winona State Computer Information Systems</p>
         <p></p>
         <h2>Riley Morrow</h2>
-        <p>Winona State Computer Science</p>
+        <p>Winona State Computer Science Major 2021. I love programming, exploring retro systems/vintage operating systems, and playing video games. I also love to play sports, cook, and explore, whether by walking or driving.</p>
         <p></p>
         <h2>Brady Becker</h2>
         <p>Winona State Computer Science</p>
