Added GitHub Link

--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
         <p>Winona State Computer Information Systems</p>
         <p></p>
         <h2>Riley Morrow</h2>
-        <p>Winona State Computer Science Major 2021. I love programming, exploring retro systems/vintage operating systems, and playing video games. I also love to play sports, cook, and explore, whether by walking or driving.</p>
-        <p></p>
+        <p>Winona State Computer Science Major 2021.</p>
+        <p>I love programming, exploring retro systems/vintage operating systems, and playing video games. I also love to play sports, cook, and explore, whether by walking or driving.</p>
         <h2>Brady Becker</h2>
         <p>Winona State Computer Science</p>
         <p></p>
@@ -46,7 +46,7 @@
         <p>I like writing Python programs, playing video and board games, and driving and working on my car.</p>
         <h1>Contact Us:</h1>
         <p>You can email us at: admin@etarium.us</p>
-        
+        <p>Our GitHub, where our code can be viewed: https://github.com/NoSuchUserException/webdev.github.io</p>
         <div class="toTop">
             <p><br/><br/><a href="#">Back To Top</a></p>
         </div>
