--- a/about.html
+++ b/about.html
@@ -45,9 +45,9 @@
         <p>Winona State Computer Information Systems</p>
         <p>I like writing Python programs, playing video and board games, and driving and working on my car.</p>
         <h1>Contact Us:</h1>
-        <p>You can email us at:</p>
+        <p>You can email us at: </p>
         <a href="admin@etarium.us">admin@etarium.us</a>
-        <p>Our GitHub, where our code can be viewed: https://github.com/NoSuchUserException/webdev.github.io</p>
+        <p>Our GitHub, where our code can be viewed: </p>
         <a href="https://github.com/NoSuchUserException/webdev.github.io">GitHub</a>
         <div class="toTop">
             <p><br/><br/><a href="#">Back To Top</a></p>
