--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-        <link rel=stylesheet type="text/css" href="css/styles.css"/>
+        <link rel=stylesheet type="text/css" href="css/textbox.css"/>
           
         <button onclick="window.location.href = 'index.html';">Home</button>
         <button onclick="window.location.href = 'TipsforBalance.html';">Tips</button>
