--- a/NeedAdvice.html
+++ b/NeedAdvice.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-        <form action="/FormtoEmail.php">
+        <form action="">
             <label for="fname">First name:</label><br>
             <input type="text" id="fname" name="fname" value=""><br>
             <label for="lname">Last name:</label><br>
